<resources>
    <string name="app_name">FitnessApp</string>
    <string name="backendURL">https://fitnessapp501.herokuapp.com/</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="log_in">Log In</string>
    <string name="usernameHint">username</string>
    <string name="emailHint">e-mail</string>
    <string name="passHint">password</string>
    <string name="confirmPassHint">reenter password</string>
    <string name="createChallenge">CREATE A CHALLENGE</string>
    <string name="joinChallenge">JOIN A CHALLENGE</string>
    <string name="create">CREATE</string>
    <string name="join">JOIN</string>
    <string name="challengeRoomName">Room Name (*)</string>
    <string name="challengeType">Challenge Type (*)</string>
    <string name="challengeDescription">Challenge description</string>
    <string name="bet">bet</string>
    <string name="betAmountHint">enter amount </string>
    <string name="endDate">End Date (*)</string>
    <string name="start">START</string>
    <string name="ready">READY</string>
    <string name="invite">INVITE</string>
    <string name="roomPassword">Room Password</string>
    <string name="hostName">Host</string>
    <string name="pickDate">Pick Date</string>
    <string name="myChallenges">My Challenges</string>
    <string name="randomChallenges">Random Challenges</string>
    <string name="enterPassword">Enter Password</string>
    <string name="cancel">CANCEL</string>
    <string name="reload">RELOAD</string>
    <string name="quitChallenge">Quit Challenge</string>
    <string name="back">BACK</string>
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="randomChall">Random Challenges</string>
    <string name="createYourChallenge">Create My Challenge</string>
    <string name="pay">PAY</string>
    <string name="buyCoin">Buy Coin</string>
    <string name="coin2usd">1 COIN = 0.50 USD</string>
    <string name="enterCoin">enter number of coins to purchase</string>
    <string name="viewStats">View Stats</string>
    <string name="challengeInfo">Challenge Info</string>
    <string name="challengeTypeInfo">Challenge Type</string>
    <string name="challengeDescriptionInfo">Description</string>
    <string name="challengeEndDateInfo">End Date</string>
    <string name="betAmountInfo">Bet Amount</string>
    <string name="beginChallenge">Begin Challenge</string>
    <string name="settings">Settings</string>
    <string name="searchChallenges">Search Challenges to join</string>
    <string name="menu">Menu</string>
    <string name="distance">My Distance(m):</string>
    <string name="weight">My Weight(lbs)</string>
    <string name="leaderBoard">LeaderBoard</string>
    <string name="finalLeaderBoard">Final LeaderBoard</string>
    <string name="takePhoto">Take Photo</string>
    <string name="weightloss">Weight Loss Challenge </string>
    <string name="enterWeightHint">enter weight</string>
    <string name="weightPresetInstr1">1. Click Generate, you will get a random gesture, and 30 sec to do the following steps</string>
    <string name="weightPresetInstr2">2. Take a photo of yourself standing on a scale while showing the weight and with a randomly generated hand gesture</string>
    <string name="weightPresetInstr3">3. Enter the exact weight(lbs) shown on your scale and then submit both the photo and the entered weight</string>
    <string name="submit">Submit</string>
    <string name="generate">Generate</string>
    <string name="exit">EXIT</string>
    <string name="youWin">YOU WIN !</string>
    <string name="youLose">YOU LOSE !</string>
    <string name="roomNameError">Room name cannot be empty !</string>
    <string name="challTypeError">Need to pick a challenge type !</string>
    <string name="endDateError">Need to pick a challenge end date !</string>
    <string name="betError">Need to enter a bet amount !</string>
    <string name="passError">Password too short, need to be at least 6 characters !</string>
    <string name="notEnoughCoin">You don\'t have enough coin !</string>
    <string-array name="challenge_types">
        <item>Distance</item>
        <item>Weight Loss</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>