<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".WeightLossChallengeInitActivity">

    <LinearLayout
        android:id = "@+id/weightlayout1"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weightloss"

            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/line2" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/descbtn1"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/weightPresetInstr1"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/descbtn1"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/weightPresetInstr2"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/weight_img"
            android:layout_marginTop="10dp"
            android:layout_width="350dp"
            android:layout_height="250dp"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/button13"
            android:layout_width="350dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:background= "@drawable/login"
            android:onClick="takePhoto"
            android:text="@string/takePhoto" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightlayout1">

        <EditText
            android:id="@+id/enter_weight_et"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/descbtn1"
            android:ems="10"
            android:hint="@string/enterWeightHint"
            android:textColorHint="#FFFFFF"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/submit_weight_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/descbtn2"
            android:onClick="submit"
            android:text="@string/submit"
            android:textAlignment="center" />
    </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>