<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".CreateChallengePresetActivity">

    <Button
        android:id="@+id/create_chall_btn"
        android:layout_width="196dp"
        android:layout_height="53dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/btn_color"
        android:onClick="createChallenge"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/chall_type_spinner"
        android:layout_width="164dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/line2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/room_name_et" />

    <EditText
        android:id="@+id/chall_descr_et"
        android:layout_width="164dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/line2"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/chall_type_spinner" />

    <EditText
        android:id="@+id/bet_amount_et"
        android:layout_width="182dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/line2"
        android:ems="10"
        android:hint="@string/betAmountHint"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toEndOf="@+id/bet_switch"
        app:layout_constraintTop_toBottomOf="@+id/pick_date_btn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="164dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/challengeType"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="164dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/challengeRoomName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="164dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/challengeDescription"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="99dp"
        android:layout_height="23dp"
        android:layout_marginTop="48dp"
        android:text="@string/endDate"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/room_pass_et"
        android:layout_width="166dp"
        android:layout_height="33dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textPassword"
        android:background = "@drawable/line2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/chall_descr_et" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="130dp"
        android:layout_height="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/roomPassword"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/room_name_et"
        android:layout_width="164dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/line2"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/pick_date_btn"
        android:layout_width="129dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#74BADA"
        android:onClick="showDatePickerDialog"
        android:text="@string/pickDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/room_pass_et" />

    <Switch
        android:id="@+id/bet_switch"
        android:layout_width="86dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:text="@string/bet"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/create_chall_error_tv"
        android:layout_width="343dp"
        android:layout_height="53dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="34dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="400dp"
        android:layout_height="20dp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/line2" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/createYourChallenge"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

</androidx.constraintlayout.widget.ConstraintLayout>