<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/email_et"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_et" />

    <EditText
        android:id="@+id/username_et"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/usernameHint"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pass_et"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="@string/passHint"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_et" />

    <EditText
        android:id="@+id/confirm_pass_et"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="@string/confirmPassHint"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_et" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="134dp"
        android:layout_height="63dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#2854C3"
        android:onClick="signUp"
        android:text="Sign Up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_pass_et" />

    <TextView
        android:id="@+id/error_tv"
        android:layout_width="344dp"
        android:layout_height="21dp"
        android:textColor="#D11717"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="560dp" />

</androidx.constraintlayout.widget.ConstraintLayout>