<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ChallengeLobbyActivity">

    <Button
        android:id="@+id/start_btn"
        android:layout_width="143dp"
        android:layout_height="72dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/start"
        tools:layout_editor_absoluteX="222dp"
        tools:layout_editor_absoluteY="594dp" />

    <Button
        android:id="@+id/ready_btn"
        android:layout_width="143dp"
        android:layout_height="72dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/ready"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="594dp" />

    <Button
        android:id="@+id/invite_btn"
        android:layout_width="129dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/invite"
        tools:layout_editor_absoluteX="266dp"
        tools:layout_editor_absoluteY="30dp" />

    <TableLayout
        android:id="@+id/participants_view"
        android:layout_width="404dp"
        android:layout_height="427dp"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="152dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>