<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".ChallengeInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/challengeInfo"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/line2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/descbtn1"
            android:text="@string/challengeTypeInfo"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/chall_type_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/descbtn2"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/descbtn1"
            android:gravity="center"
            android:text="@string/challengeDescriptionInfo"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/chall_descrp_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/descbtn2"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/challengeEndDateInfo"
            android:background="@drawable/descbtn1"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/end_date_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#000000"
            android:background="@drawable/descbtn2"
            android:layout_marginTop="5dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/betAmountInfo"
            android:background="@drawable/descbtn1"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bet_amount_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/descbtn2"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button1"
            android:onClick="back"
            android:text="@string/back"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>